<resources>
    <string name="app_name">Leafy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_my_garden">My Garden</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_ask_botanist">Profile</string>
    <string name="tab_camera">Camera</string>
    <string name="search_placeholder">Search for anything</string>
    <string name="search_placeholder_home">Search plants, flowers, trees</string>
    <string name="cd_location">Location</string>
    <string name="plant_tools">Plant Tools</string>
    <string name="plant_identifier">Plant Identifier</string>
    <string name="disease_identifier">Disease Identifier</string>
    <string name="light_meter">Light Meter</string>
    <string name="water_meter">Water Meter</string>
    <string name="free_premium_available">Free Premium Available</string>
    <string name="tap_to_claim">Tap to claim</string>
    <string name="toxicity_identifier">Toxicity Identifier</string>
    <string name="mushroom_identifier">Mushroom Identifier</string>
    <string name="show_more">Show More</string>
    <string name="clear_text">clear</string>
    <string name="image_of_scanned_plant">Ảnh của cây đã được quét</string>
    <string name="close">Close</string>
    <string name="search_hint">Search plants, flowers, trees</string>
    <string name="cancel">Cancel</string>
    <string name="no_results">No results found</string>
    <string name="clear">Clear</string>
    <string name="default_web_client_id">713080689378-t9f0su6u37puhnbpd3cjimfgpreh29lk.apps.googleusercontent.com</string>
    <string name="disease_info_title_short">Thông tin bệnh</string>
    <string name="choose_affected_plants_vi">Chọn cây bị bệnh</string>


</resources>